--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -1,7 +1,10 @@
 {
   "navigationFallback": {
     "rewrite": "/index.html",
-    "exclude": ["/assets/*", "*.{css,js,json,svg,png,jpg,jpeg,gif,ico,woff,woff2,ttf,webp,webmanifest}"]
+    "exclude": [
+      "/assets/*",
+      "*.{css,js,json,svg,png,jpg,jpeg,gif,ico,woff,woff2,ttf,webp,webmanifest}"
+    ]
   },
   "mimeTypes": {
     ".js": "application/javascript",
