--- a/frontend/staticwebapp.config.json
+++ b/frontend/staticwebapp.config.json
@@ -1,28 +1,14 @@
 {
-  "navigationFallback": {
-    "rewrite": "/index.html",
-    "exclude": [
-      "/assets/*",
-      "*.{css,js,json,svg,png,jpg,jpeg,gif,ico,woff,woff2,ttf,webp,webmanifest}"
-    ]
+  "headers": {
+    "/**": {
+      "X-Content-Type-Options": "nosniff"
+    }
   },
-  "mimeTypes": {
-    ".js": "application/javascript",
-    ".mjs": "application/javascript",
-    ".json": "application/json",
-    ".css": "text/css",
-    ".svg": "image/svg+xml",
-    ".png": "image/png",
-    ".jpg": "image/jpeg",
-    ".jpeg": "image/jpeg",
-    ".gif": "image/gif",
-    ".ico": "image/x-icon",
-    ".woff": "font/woff",
-    ".woff2": "font/woff2",
-    ".ttf": "font/ttf",
-    ".webmanifest": "application/manifest+json"
-  },
-  "globalHeaders": {
-    "X-Content-Type-Options": "nosniff"
-  }
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "destination": "/index.html",
+      "status": 200
+    }
+  ]
 }
